# trading-dashboard

./: .gitignore  LICENSE  README.md  config.py  credentials.py  docker-compose.yml  pyproject.toml  requirements.txt  scraper.py  streamlit_app.py
api/: main.py
components/: settings.json
components/tradingedge-scraper/: scraper.py
docker/: app.dockerfile
modules/: navigation.py  settings.py  watchlists.py
modules/repository/: repository_interface.py  sqlite3_repo.py  supabase_repo.py
modules/telegram_bot/: bot_alerts.py  message_template.j2  telegram_bot_readme.md
modules/tradingedge_scraper/: credentials.py  scraper.py  validators.py
pages/: navigation.py  page_positions.py  page_settings.py  page_tradingedege_scraper.py  page_watchlists.py  positions.py  settings.py
static/: nasdaq_screener_1736874960864.csv
supervisor/: supervisord.conf
